--- a/style/mainDesign.css
+++ b/style/mainDesign.css
@@ -4,59 +4,76 @@
     padding: 0;
 }
 
-.main{
+html{
+    scroll-behavior: smooth;
+    background: linear-gradient(#f87373, #85F7F7);
+}
+
+#titleDesignImg{
+    width: 900px;
+    height: 480px;
+    position: absolute;
+    left: 21%;
+    top: -4.3%;
+    z-index: -1;
+    opacity: 70%;
+    transform: rotate(180deg);
+}
+
+
+.navbar{
     width: 100%;
-    height: 1400px;
-    position: relative;
-    overflow: hidden;
-    padding: 0px;
-    background: linear-gradient(#85F7F7, #F78585);
+    transition: background-color 0.4s, opacity 0.3s;
+    position: sticky;
+    top: 0;
+    background-color: #f87373;
+    margin-bottom: 30px;
+    z-index: 1;
 }
 
-.nav-links{
-    display: inline;
+#links{    
     text-align: right;
-    position: relative;
-    top: 20px;
-    left: -10%;    
+    width: 70%; 
 }
 
-.nav-links ul a{
+#links ul a{
     margin: 30px;
     font-weight: 900;
-    color: #F7BE85;
+    font-size: 18px;
+    color: #000000;
     letter-spacing: 2px;
-    transition: color 2s, font-size 1.6s;    
+    transition: color 1.4s, font-size 1s;   
+    width: 40px; 
 }
 
-.nav-links ul a:hover{
-    font-size: 25px;
-    color: #F78585;
-}
-
-.nav-links ul a:link{
-    border: red;
+#links ul a:hover{
+    font-size: 22px;
+    color: #57f58c;
+    z-index: 1;
 }
 
 #logo{
-    width: 170px;
-    position: absolute;
-    top: -20px;
-    left: -20px;
+    width: 10%;
+}
+
+#logo img{
+    width: 70px;
 }
 
 .mainText{
-    position: relative;
-    top: 15vh;
+    position: static;
+    top: 30%;
     width: 90%;
     text-align: center;
     margin: 0 auto;
+    margin-top: 70px;
 }
 
 .mainText h1{
     color: rgb(74, 78, 78);
     font-size: 30px;
     word-spacing: 10px;
+    
 }
 
 .mainText h2{
@@ -68,7 +85,7 @@
 }
 
 .mainText h2:hover{
-    color: #F78585;    
+    color: #57f58c;    
     font-size: 80px;
     word-spacing: 10px;
 }
@@ -76,11 +93,10 @@
 .mainText .smallText{
     font-family: 'Inconsolata', monospace;
     font-size: 18px;
-    margin-top: 30px;
-   
-    
+    margin-top: 30px;    
     border-left: solid rgb(180, 179, 179);
-    border-width: 20px;
+    border-width: 18px;
+    box-shadow: rgb(56, 58, 58) -3px 0px;
 }
 
 .mainText .smallText ul li{
@@ -99,8 +115,9 @@
     margin-top: 35px;
 }
 
-.criterium{
+.box{
     background-color: rgb(250, 205, 154);
+
     box-shadow: rgb(250, 220, 130)  5px 7px;
     margin-top: 20px;
     position: relative;
@@ -112,8 +129,54 @@
     padding: 10px;
 }
 
+.first{
+    background-color: rgb(250, 205, 154);
+}
+
+.second{
+    background-color: rgb(116, 240, 142)
+}
+
+.third{
+    background-color: rgb(255, 137, 196)
+}
+.Fourth{
+    background-color: rgb(250, 205, 154);
+}
+
+.Fifth{
+    background-color: rgb(68, 221, 248)
+}
+
+.Sixth{
+    background-color: rgb(139, 115, 114)
+}
+.Seventh{
+    background-color: rgb(255, 239, 93)
+}
+.Seventh{
+    background-color: rgb(149, 127, 175)
+}
+.Ninth{
+    background-color: rgb(113, 190, 235)
+}
+
+.boxText{
+    font-family: 'Inconsolata', monospace;
+    font-size: 18px;
+    padding: 20px;
+}
+
+ .boxTitle{
+    text-align: left;
+    font-weight: 100;
+    margin-left: 10px;
+    letter-spacing: 1px;
+}
+
 .moderatorForm{
-    margin-top: 30px;
+    margin: 60px;
+    
     display: block;
     border: ridge red;
 }
@@ -121,6 +184,10 @@
 .moderatorForm form{
     width: 1000px;
 }
+
+
+
+
 
 
 
