--- a/style/mainDesign.css
+++ b/style/mainDesign.css
@@ -5,59 +5,23 @@
 }
 
 html{
-    scroll-behavior: smooth;
+    scroll-behavior: smooth;     
     background: linear-gradient(#f87373, #85F7F7);
 }
+
+body::-webkit-scrollbar {
+    display: none;
+  }
 
 #titleDesignImg{
     width: 900px;
     height: 480px;
     position: absolute;
-    left: 21%;
-    top: -4.3%;
+    left: 27%;
+    top: -3.6%;
     z-index: -1;
     opacity: 70%;
     transform: rotate(180deg);
-}
-
-
-.navbar{
-    width: 100%;
-    transition: background-color 0.4s, opacity 0.3s;
-    position: sticky;
-    top: 0;
-    background-color: #f87373;
-    margin-bottom: 30px;
-    z-index: 1;
-}
-
-#links{    
-    text-align: right;
-    width: 70%; 
-}
-
-#links ul a{
-    margin: 30px;
-    font-weight: 900;
-    font-size: 18px;
-    color: #000000;
-    letter-spacing: 2px;
-    transition: color 1.4s, font-size 1s;   
-    width: 40px; 
-}
-
-#links ul a:hover{
-    font-size: 22px;
-    color: #57f58c;
-    z-index: 1;
-}
-
-#logo{
-    width: 10%;
-}
-
-#logo img{
-    width: 70px;
 }
 
 .mainText{
@@ -77,7 +41,7 @@ html{
 }
 
 .mainText h2{
-    transition: color 2s, font-size 2s;
+    transition: all 0.2s ease-in-out;
     letter-spacing: 3px;
     color: rgb(0, 110, 255);
     font-size: 50px;
@@ -86,7 +50,9 @@ html{
 
 .mainText h2:hover{
     color: #57f58c;    
-    font-size: 80px;
+    
+    transform: scale(1.5);
+
     word-spacing: 10px;
 }
 
@@ -107,6 +73,7 @@ html{
     left: 7%;
     text-align: left;
     font-style: italic;
+    
 }
 
 .mainText .subTitle{
@@ -115,75 +82,8 @@ html{
     margin-top: 35px;
 }
 
-.box{
-    background-color: rgb(250, 205, 154);
 
-    box-shadow: rgb(250, 220, 130)  5px 7px;
-    margin-top: 20px;
-    position: relative;
-    left: 5%;
-    width: 80%;
-    margin-top: 20;
-    margin-right: 3%;
-    margin-left: 3%;
-    padding: 10px;
-}
 
-.first{
-    background-color: rgb(250, 205, 154);
-}
-
-.second{
-    background-color: rgb(116, 240, 142)
-}
-
-.third{
-    background-color: rgb(255, 137, 196)
-}
-.Fourth{
-    background-color: rgb(250, 205, 154);
-}
-
-.Fifth{
-    background-color: rgb(68, 221, 248)
-}
-
-.Sixth{
-    background-color: rgb(139, 115, 114)
-}
-.Seventh{
-    background-color: rgb(255, 239, 93)
-}
-.Seventh{
-    background-color: rgb(149, 127, 175)
-}
-.Ninth{
-    background-color: rgb(113, 190, 235)
-}
-
-.boxText{
-    font-family: 'Inconsolata', monospace;
-    font-size: 18px;
-    padding: 20px;
-}
-
- .boxTitle{
-    text-align: left;
-    font-weight: 100;
-    margin-left: 10px;
-    letter-spacing: 1px;
-}
-
-.moderatorForm{
-    margin: 60px;
-    
-    display: block;
-    border: ridge red;
-}
-
-.moderatorForm form{
-    width: 1000px;
-}
 
 
 
