--- a/style/rules.css
+++ b/style/rules.css
@@ -1,7 +1,5 @@
 .box{
     background-color: rgb(250, 205, 154);
-
-    
     margin-top: 20px;
     position: relative;
     left: 5%;
@@ -61,4 +59,22 @@
 .box:hover{
     transform: scale(1.02);
     box-shadow: rgb(250, 220, 130)  5px 7px;
+}
+
+.verticalTextRules{
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+    position: absolute;
+    left: 6%;
+    top: 350px;
+    height: 7200px;
+    font-size: 66px;
+    opacity: 40%;
+    transition: opacity 1s, color 1s;
+    cursor: default;
+}
+
+.verticalTextRules:hover{
+    opacity: 100%;
+    color: rgb(23, 220, 255);
 }
